arm_sve2/ms3/output/output-10144.err
run_svereg_ms3.cpp: In function ‘int main(int, char**)’:
run_svereg_ms3.cpp:760:40: error: ‘omp_time’ was not declared in this scope; did you mean ‘mktime’?
  760 |         printf("Openmp Time = %.5g\n", omp_time);
      |                                        ^~~~~~~~
      |                                        mktime
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss01-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
rm: cannot remove 'conv_layer': No such file or directory
